Fixed size of restore button on win10 (was too big by two pixels). Looks great

--- a/less/navigationBar.less
+++ b/less/navigationBar.less
@@ -157,8 +157,8 @@
             background-color: #cacacb;
           }
           .widget {
-            margin-top: 4px;
-
+            margin-top: 8px;
+            .widget1 { width: 6px; height: 6px; }
             .widget2 { display: inline-block; }
             .widget3 { display: inline-block; }
             .widget4 { display: inline-block; }
@@ -184,22 +184,22 @@
             height: 2px;
             background: black;
             position: relative;
-            top: -22px;
+            top: -20px;
             left: 2px;
           }
           .widget3 {
             display: none;
-            width: 10px;
+            width: 8px;
             height: 1px;
             background: black;
             position: relative;
-            top: -23px;
+            top: -21px;
             left: 1px;
           }
           .widget4 {
             display: none;
             width: 1px;
-            height: 10px;
+            height: 8px;
             background: black;
             position: relative;
             top: -14px;
@@ -211,8 +211,8 @@
             height: 1px;
             background: black;
             position: relative;
-            top: -29px;
-            left: 5px;
+            top: -14px;
+            left: -2px;
           }
         }
       }
